test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_5/src/main.nr

        fn main() -> pub bool {
            let _ = main();
            true
        }
        